--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   provider: ^6.0.5
   get_it: ^7.6.0
   flutter_svg: ^2.0.5
+  firebase_auth: ^4.6.0
+  firebase_core: ^2.12.0
 
 dev_dependencies:
   flutter_test:
